Change html and css

--- a/css/main.css
+++ b/css/main.css
@@ -23,17 +23,19 @@ body {
 }
 
 .background {
-  margin-top: 35%;
-  color: rgba(159, 198, 204, 0.75);
+  margin-top: 15%;
+  color: rgba(159, 198, 204, 0.5);
   font-family: Euphoria Script, cursive;
+  line-height: .2;
 }
 
 blockquote {
-  max-width: 35%;
+  max-width: 40%;
   border: 2px solid #fdf8f0;
   color: #fdf8f0;
   background-color: rgba(75, 29, 89, 0.5);
   left: 50%;
+  top: 15%;
   transform: translate(-50%,50%);
   font-family: Josefin Slab, serif;
 }
