--- a/css/main.css
+++ b/css/main.css
@@ -8,12 +8,10 @@ body {
 }
 
 blockquote {
-  max-width: 40%;
+  max-width: 30%;
+  min-width: 230px;
   border: 2px solid #fdf8f0;
   color: #fdf8f0;
   background-color: rgba(75, 29, 89, .5);
-  left: 50%;
-  top: 15%;
-  transform: translate(-50%, 50%);
   font-family: "Josefin Slab", serif;
 }
