--- a/css/type.css
+++ b/css/type.css
@@ -1,6 +1,6 @@
 /*
   Typografier || Code released under the UNLICENSE
-  https://typografier.web-dev.tools/#0,100,1.3,1.067,0;38,110,1.4,1.500,1;60,120,1.5,1.500,1;90,130,1.5,1.500,1
+  https://typografier.web-dev.tools/#0,100,1.3,1.414,0;38,110,1.4,1.500,1;60,120,1.5,1.500,1;90,130,1.5,1.500,1
 */
 
 html {
@@ -171,63 +171,63 @@ menu {
 }
 
 .tenamega {
-  font-size: 2.0408rem;
-  line-height: 2.925rem;
+  font-size: 45.1797rem;
+  line-height: 58.825rem;
 }
 
 .tenakilo {
-  font-size: 1.9127rem;
-  line-height: 2.6rem;
+  font-size: 31.9517rem;
+  line-height: 41.6rem;
 }
 
 .tena {
-  font-size: 1.7926rem;
-  line-height: 2.6rem;
+  font-size: 22.5967rem;
+  line-height: 29.575rem;
 }
 
 .nina {
-  font-size: 1.68rem;
-  line-height: 2.275rem;
+  font-size: 15.9807rem;
+  line-height: 20.8rem;
 }
 
 .yotta {
-  font-size: 1.5745rem;
-  line-height: 2.275rem;
+  font-size: 11.3018rem;
+  line-height: 14.95rem;
 }
 
 .zetta {
-  font-size: 1.4757rem;
-  line-height: 1.95rem;
+  font-size: 7.9928rem;
+  line-height: 10.4rem;
 }
 
 h1,
 .exa {
-  font-size: 1.383rem;
-  line-height: 1.95rem;
+  font-size: 5.6526rem;
+  line-height: 7.475rem;
 }
 
 h2,
 .peta {
-  font-size: 1.2962rem;
-  line-height: 1.95rem;
+  font-size: 3.9976rem;
+  line-height: 5.2rem;
 }
 
 h3,
 .tera {
-  font-size: 1.2148rem;
-  line-height: 1.625rem;
+  font-size: 2.8271rem;
+  line-height: 3.9rem;
 }
 
 h4,
 .giga {
-  font-size: 1.1385rem;
-  line-height: 1.625rem;
+  font-size: 1.9994rem;
+  line-height: 2.6rem;
 }
 
 h5,
 .mega {
-  font-size: 1.067rem;
-  line-height: 1.625rem;
+  font-size: 1.414rem;
+  line-height: 1.95rem;
 }
 
 h6,
@@ -240,23 +240,23 @@ textarea {
 
 small,
 .milli {
-  font-size: .9372rem;
+  font-size: .7072rem;
   line-height: 1.3rem;
 }
 
 .micro {
-  font-size: .8784rem;
-  line-height: 1.3rem;
+  font-size: .5002rem;
+  line-height: .65rem;
 }
 
 .nano {
-  font-size: .8232rem;
-  line-height: 1.3rem;
+  font-size: .3537rem;
+  line-height: .65rem;
 }
 
 .pico {
-  font-size: .7715rem;
-  line-height: 1.3rem;
+  font-size: .2502rem;
+  line-height: .325rem;
 }
 
 ul {
