--- a/css/main.css
+++ b/css/main.css
@@ -15,3 +15,7 @@ blockquote {
   background-color: rgba(75, 29, 89, .5);
   font-family: "Josefin Slab", serif;
 }
+
+blockquote:hover {
+  transform: scale(1.5, 1.5);
+}
