--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,8 @@ body {
 .background {
   color: rgba(159, 198, 204, .5);
   font-family: "Euphoria Script", cursive;
+  animation: mycolour 1s;
+  animation-iteration-count: infinite;
 }
 
 blockquote {
@@ -19,4 +21,12 @@ blockquote {
 blockquote:hover {
   transition: 1s;
   border-color: rgba(159, 198, 204, .5);
+}
+
+@keyframes mycolour {
+  0% {color: rgba(159, 198, 204, .5);}
+  25% {color: rgba(159, 198, 204, .4.5);}
+  50% {color: rgba(159, 198, 204, .4);}
+  75% {color: rgba(159, 198, 204, .4.5);}
+  100% {color: rgba(159, 198, 204, .5);}
 }
